# Nano-Banana-Shorts-Editor

./: ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  README.md  main.py  pyproject.toml  requirements.txt  test_imports.py  test_workflow.py
src/video/: editor.py  extractor.py  frame_processor.py  gemini_frame_analyzer.py  gemini_video_analyzer.py
